controller and changh models and utils

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=SHALOM\\SQLSERVER;Initial Catalog=MosadMissions;User ID=sa;Password=1234;TrustServerCertificate=Yes"
+    },
+        "Logging": {
+            "LogLevel": {
+                "Default": "Information",
+                "Microsoft.AspNetCore": "Warning"
+            }
+        },
+        "AllowedHosts": "*"
     }
-  },
-  "AllowedHosts": "*"
-}
