MissionController and finish ApiServer

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
 
     "ConnectionStrings": {
-        "DefaultConnection": "Server=SHALOM\\SQLSERVER;Initial Catalog=MossadAgents;User ID=sa;Password=1234;TrustServerCertificate=Yes"
+        "DefaultConnection": "Server=SHALOM\\SQLSERVER;Initial Catalog=Mosad;User ID=sa;Password=1234;TrustServerCertificate=Yes"
     },
         "Logging": {
             "LogLevel": {
