--- a/appsettings.json
+++ b/appsettings.json
@@ -1,13 +1,18 @@
 {
-
     "ConnectionStrings": {
-        "DefaultConnection": "Server=SHALOM\\SQLSERVER;Initial Catalog=Mosad;User ID=sa;Password=1234;TrustServerCertificate=Yes"
+        "DefaultConnection": "Host=localhost;Port=5432;Database=MosadProject;Username=shalom;Password=root"
     },
-        "Logging": {
-            "LogLevel": {
-                "Default": "Information",
-                "Microsoft.AspNetCore": "Warning"
-            }
-        },
-        "AllowedHosts": "*"
-    }
+    "Jwt": {
+        "Key": "Mys3cr3tK3y@1234567890abcdefghijklmnopqrstuv",
+        "Issuer": "https://localhost:5279",
+        "Audience": "https://localhost:5279",
+        "ExpiresInMinutes": 60
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
+}
